# invenio-users-resources

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_users_resources/: __init__.py  config.py  entity_resolvers.py  ext.py  forms.py  models.py  notifications.py  permissions.py  proxies.py  resolvers.py  utils.py  version.py  views.py
invenio_users_resources/administration/views/: __init__.py  users.py
invenio_users_resources/notifications/: __init__.py  filters.py  generators.py
invenio_users_resources/records/: __init__.py  api.py  hooks.py  models.py
invenio_users_resources/records/dumpers/: __init__.py  email.py
invenio_users_resources/records/jsonschemas/: __init__.py
invenio_users_resources/records/jsonschemas/users/: group-v1.0.0.json  user-v1.0.0.json
invenio_users_resources/records/mappings/: __init__.py
invenio_users_resources/records/mappings/os-v1/: __init__.py
invenio_users_resources/records/mappings/os-v2/: __init__.py
invenio_users_resources/records/mappings/v6/: __init__.py
invenio_users_resources/records/mappings/v7/: __init__.py
invenio_users_resources/records/systemfields/: __init__.py  current_user.py
invenio_users_resources/resources/: __init__.py
invenio_users_resources/resources/domains/: __init__.py  config.py  resource.py
invenio_users_resources/resources/groups/: __init__.py  config.py  errors.py  resource.py
invenio_users_resources/resources/users/: __init__.py  config.py  errors.py  resource.py
invenio_users_resources/services/: __init__.py  common.py  decorators.py  generators.py  params.py  permissions.py  results.py  schemas.py
invenio_users_resources/services/domains/: __init__.py  components.py  config.py  facets.py  service.py  tasks.py
invenio_users_resources/services/groups/: __init__.py  config.py  facets.py  results.py  service.py  tasks.py
invenio_users_resources/services/users/: __init__.py  config.py  facets.py  lock.py  params.py  query.py  results.py  search_params.py  service.py  tasks.py
invenio_users_resources/templates/security/email/: new_user_via_admin.html  new_user_via_admin.txt
invenio_users_resources/templates/semantic-ui/invenio_users_resources/: users-search.html
invenio_users_resources/translations/: messages.pot
invenio_users_resources/translations/af/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ar/LC_MESSAGES/: messages.po
invenio_users_resources/translations/bg/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ca/LC_MESSAGES/: messages.po
invenio_users_resources/translations/cs/LC_MESSAGES/: messages.po
invenio_users_resources/translations/da/LC_MESSAGES/: messages.po
invenio_users_resources/translations/de/LC_MESSAGES/: messages.po
invenio_users_resources/translations/de_AT/LC_MESSAGES/: messages.po
invenio_users_resources/translations/de_DE/LC_MESSAGES/: messages.po
invenio_users_resources/translations/el/LC_MESSAGES/: messages.po
invenio_users_resources/translations/en_AT/LC_MESSAGES/: messages.po
invenio_users_resources/translations/en_HU/LC_MESSAGES/: messages.po
invenio_users_resources/translations/es/LC_MESSAGES/: messages.po
invenio_users_resources/translations/es_CU/LC_MESSAGES/: messages.po
invenio_users_resources/translations/es_MX/LC_MESSAGES/: messages.po
invenio_users_resources/translations/et/LC_MESSAGES/: messages.po
invenio_users_resources/translations/et_EE/LC_MESSAGES/: messages.po
invenio_users_resources/translations/fa/LC_MESSAGES/: messages.po
invenio_users_resources/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_users_resources/translations/fi/LC_MESSAGES/: messages.po
invenio_users_resources/translations/fr/LC_MESSAGES/: messages.po
invenio_users_resources/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_users_resources/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_users_resources/translations/gl/LC_MESSAGES/: messages.po
invenio_users_resources/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_users_resources/translations/hr/LC_MESSAGES/: messages.po
invenio_users_resources/translations/hu/LC_MESSAGES/: messages.po
invenio_users_resources/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_users_resources/translations/it/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ja/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ka/LC_MESSAGES/: messages.po
invenio_users_resources/translations/lt/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ne/LC_MESSAGES/: messages.po
invenio_users_resources/translations/no/LC_MESSAGES/: messages.po
invenio_users_resources/translations/pl/LC_MESSAGES/: messages.po
invenio_users_resources/translations/pt/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ro/LC_MESSAGES/: messages.po
invenio_users_resources/translations/ru/LC_MESSAGES/: messages.po
invenio_users_resources/translations/rw/LC_MESSAGES/: messages.po
invenio_users_resources/translations/sk/LC_MESSAGES/: messages.po
tests/: conftest.py  test_invenio_users_resources.py  test_notifications.py  test_user_roles_admin.py
tests/administration/: __init__.py  domains.py  records.py  users.py
tests/api/: conftest.py  test_groups_services.py
tests/avatars/: conftest.py  test_users_services.py
tests/resources/: test_avatars.py  test_resources_domains.py  test_resources_groups.py  test_resources_users.py
tests/services/: test_generators.py  test_schemas.py  test_service_groups.py  test_service_tasks_domains.py  test_service_users.py
tests/services/users/: test_service_users.py  test_user_moderation.py
(+23 files in other folders)
