# SPDX-FileCopyrightText: 2022-2024 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2025-2026 KTH Royal Institute of Technology.
# SPDX-FileCopyrightText: 2022-2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-users-resources"
description = "Invenio module providing management APIs for users and roles/groups."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN/TU Wien/JRC", email = "info@inveniosoftware.org" },
]
keywords = [
  "groups",
  "invenio",
  "management",
  "roles",
  "users",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-accounts>=9.0.0,<10.0.0",
  "invenio-administration>=7.0.0,<8.0.0",
  "invenio-base>=2.3.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-notifications>=2.0.0,<3.0.0",
  "invenio-oauthclient>=9.0.0,<10.0.0",
  "invenio-records-resources>=11.0.0,<12.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-users-resources"

[project.entry-points."invenio_access.actions"]
user_management_action = "invenio_users_resources.permissions:user_management_action"

[project.entry-points."invenio_base.api_apps"]
invenio_users_resources = "invenio_users_resources.ext:InvenioUsersResources"

[project.entry-points."invenio_base.api_blueprints"]
invenio_domains = "invenio_users_resources.views:create_domains_resources_bp"
invenio_groups = "invenio_users_resources.views:create_groups_resources_bp"
invenio_users = "invenio_users_resources.views:create_users_resources_bp"
invenio_users_resources = "invenio_users_resources.views:blueprint"

[project.entry-points."invenio_base.api_finalize_app"]
invenio_users_resources = "invenio_users_resources.ext:api_finalize_app"

[project.entry-points."invenio_base.apps"]
invenio_users_resources = "invenio_users_resources.ext:InvenioUsersResources"

[project.entry-points."invenio_base.blueprints"]
invenio_users_resources = "invenio_users_resources.views:blueprint"

[project.entry-points."invenio_base.finalize_app"]
invenio_users_resources = "invenio_users_resources.ext:finalize_app"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_users_resources"

[project.entry-points."invenio_search.mappings"]
domains = "invenio_users_resources.records.mappings"
groups = "invenio_users_resources.records.mappings"
users = "invenio_users_resources.records.mappings"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-db[postgresql,mysql]>=2.2.0,<3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_users_resources/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_users_resources/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_users_resources/translations/messages.pot"
output_dir = "invenio_users_resources/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_users_resources/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_users_resources",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_users_resources --cov-report=term-missing'
testpaths = "tests invenio_users_resources"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
