# -*- coding: utf-8 -*-
#
# Copyright (C) 2022-2024 CERN.
# Copyright (C) 2022-2024 Graz University of Technology.
#
# Invenio-Users-Resources is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-users-resources
version = attr: invenio_users_resources.__version__
description = Invenio module providing management APIs for users and roles/groups.
long_description = file: README.rst, CHANGES.rst
keywords = invenio users roles groups management
license = MIT
author = CERN/TU Wien/JRC
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-users-resources
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-administration>=2.0.0,<3.0.0
    invenio-accounts>=5.0.0,<6.0.0
    invenio-i18n>=2.0.0
    invenio-notifications>=0.1.0,<1.0.0
    invenio-oauthclient>=4.0.0,<5.0.0
    invenio-records-resources>=6.0.0,<7.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    invenio-app>=1.4.0,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    sphinx>=4.5
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_users_resources = invenio_users_resources.ext:InvenioUsersResources
invenio_base.api_apps =
    invenio_users_resources = invenio_users_resources.ext:InvenioUsersResources
invenio_base.api_blueprints =
    invenio_users = invenio_users_resources.views:create_users_resources_bp
    invenio_groups = invenio_users_resources.views:create_groups_resources_bp
    invenio_domains = invenio_users_resources.views:create_domains_resources_bp
    invenio_users_resources = invenio_users_resources.views:blueprint
invenio_base.api_finalize_app =
    invenio_users_resources = invenio_users_resources.ext:api_finalize_app
invenio_base.blueprints =
    invenio_users_resources = invenio_users_resources.views:blueprint
invenio_base.finalize_app =
    invenio_users_resources = invenio_users_resources.ext:finalize_app
invenio_search.mappings =
    users = invenio_users_resources.records.mappings
    groups = invenio_users_resources.records.mappings
    domains = invenio_users_resources.records.mappings
invenio_i18n.translations =
    messages = invenio_users_resources
invenio_access.actions =
    user_management_action = invenio_users_resources.permissions:user_management_action


[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_users_resources/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_users_resources/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_users_resources/translations/messages.pot
output-dir = invenio_users_resources/translations/

[update_catalog]
input-file = invenio_users_resources/translations/messages.pot
output-dir = invenio_users_resources/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_users_resources --cov-report=term-missing
testpaths = docs tests invenio_users_resources
